src/objects/WorkflowProfiling__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Workflows Profiling</relationshipLabel>
        <relationshipName>Workflows_Profiling</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Rating__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Rating</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Workflow__c</fullName>
        <label>Workflow</label>
        <referenceTo>Workflow__c</referenceTo>
        <relationshipLabel>Workflows Profiling</relationshipLabel>
        <relationshipName>Workflows_Profiling</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Workflow Profiling</label>
    <nameField>
        <displayFormat>WFP #{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Workflows Profiling</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>